--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primaryGreen"
+    android:background="@color/white"
     android:padding="16dp"
     tools:context=".SplashActivity">
 
@@ -19,30 +19,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitleAplikasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interblack"
+        android:fontFamily="@font/intersemibold"
         android:text="@string/aplikasi"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/textSizeHeaderBig"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textTitleDesaTenrigangkae"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitleDesaTenrigangkae"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interblack"
+        android:fontFamily="@font/intermedium"
         android:text="@string/desa_tenrigangkae"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/textSizeHeaderBig"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
