--- a/app/src/main/res/layout/layout_develop_by.xml
+++ b/app/src/main/res/layout/layout_develop_by.xml
@@ -4,18 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
-        android:fontFamily="@font/interregular"
-        android:text="@string/developed_by"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textSizeHeader"
-        app:layout_constraintBottom_toTopOf="@+id/textPTSun"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textPTSun"
@@ -23,22 +12,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/interregular"
         android:text="@string/pt_synergy_utility_network"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textSizeHeader"
-        app:layout_constraintBottom_toTopOf="@+id/textWebsiteSun"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textWebsiteSun"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/interregular"
-        android:text="@string/www_sunistheworld_com"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/textSizeHeader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
