--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,15 +37,11 @@
             app:destination="@id/detailSocialAssitanceFragment" />
     </fragment>
     <fragment
-        android:id="@+id/nav_status"
-        android:name="com.example.desaa.ui.user.letter_submission_status.LetterSubmissionStatusFragment"
-        android:label="fragment_letter_submission_status"
-        tools:layout="@layout/fragment_letter_submission_status" />
-    <fragment
         android:id="@+id/nav_success_send"
         android:name="com.example.desaa.ui.user.success_send.SuccessSendFragment"
         android:label="fragment_success_send"
         tools:layout="@layout/fragment_success_send" >
+<!--        <action-->
         <action
             android:id="@+id/action_nav_success_send_to_nav_status"
             app:destination="@id/nav_status"
@@ -54,10 +50,12 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/nav_home" />
+<!--            android:id="@+id/action_nav_success_send_to_letterSubmissiionFragment"-->
+<!--            app:destination="@id/letterSubmissiionFragment" />-->
     </fragment>
     <activity
         android:id="@+id/nav_loginActivity"
-        android:name="com.example.desaa.LoginActivity"
+        android:name="com.example.desaa.ui.login.LoginActivity"
         android:label="activity_login"
         tools:layout="@layout/activity_login" />
     <fragment
@@ -70,5 +68,10 @@
             app:argType="com.example.desaa.model.response.ModelDataDetalSocialAssistance"
             app:nullable="true" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_status"
+        android:name="com.example.desaa.ui.user.letter_submission_status.LetterSubmissiionFragment"
+        android:label="fragment_letter_submissiion"
+        tools:layout="@layout/fragment_letter_submissiion" />
 
 </navigation>
