--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height_small"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/primaryGreen"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -15,7 +15,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/logo_maros"
-        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,22 +23,16 @@
         android:id="@+id/textTitleAplikasiTopBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/textSizeHeader"
-        android:fontFamily="@font/intersemibold"
-        android:text="@string/aplikasi"
-        android:textColor="@color/white"
         android:layout_marginStart="@dimen/distance_12"
-        app:layout_constraintTop_toTopOf="@+id/imageLogo"
-       app:layout_constraintStart_toEndOf="@id/imageLogo"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textTitleDesaTenrigangkaeTopBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:fontFamily="@font/intersemibold"
-        android:text="@string/desa_tenrigangkae"
-        android:textSize="@dimen/textSizeHeader"
+        android:text="DeSUN"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/textTitleAplikasiTopBar"
-        app:layout_constraintTop_toBottomOf="@+id/textTitleAplikasiTopBar" />
+        android:textSize="@dimen/textSizeHeaderBig"
+        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/imageLogo"
+        app:layout_constraintTop_toTopOf="@+id/imageLogo" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
