--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -73,7 +73,7 @@
     <style name="ButtonPrimary" >
         <item name="android:fontFamily">@font/interregular</item>
         <item name="android:textSize">@dimen/textSizeNormal</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/primaryGreen</item>
     </style>
 
