Menyelesaikan zoom in / out image alertdialog

--- a/app/src/main/res/layout/fragment_social_assistance_recipient.xml
+++ b/app/src/main/res/layout/fragment_social_assistance_recipient.xml
@@ -104,7 +104,7 @@
             android:id="@+id/autoCompleteHelpProgramList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
