--- a/app/src/main/res/layout/fragment_dashboard_backwood.xml
+++ b/app/src/main/res/layout/fragment_dashboard_backwood.xml
@@ -88,8 +88,8 @@
             style="@style/TextRegular2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data Kosong"
-            android:textSize="@dimen/textSizeHeaderBig"
+            android:text="@string/data_kosong"
+            android:textSize="@dimen/textSizeHeader"
             app:layout_constraintBottom_toBottomOf="@+id/listNotAcceptBackwoods"
             app:layout_constraintEnd_toEndOf="@id/listNotAcceptBackwoods"
             app:layout_constraintStart_toStartOf="@+id/listNotAcceptBackwoods"
@@ -148,8 +148,8 @@
             style="@style/TextRegular2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data Kosong"
-            android:textSize="@dimen/textSizeHeaderBig"
+            android:text="@string/data_kosong"
+            android:textSize="@dimen/textSizeHeader"
             app:layout_constraintEnd_toEndOf="@id/imageNoData1"
             app:layout_constraintStart_toStartOf="@+id/imageNoData1"
             app:layout_constraintTop_toBottomOf="@+id/imageNoData1" />
