--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -20,6 +20,11 @@
                     android:icon="@drawable/ic_open_book"
                     android:title="@string/penerimaan_bantuan_sosial" />
 
+                <item
+                    android:id="@+id/nav_village_statistics"
+                    android:icon="@drawable/ic_statistics_chart"
+                    android:title="@string/statistik_desa" />
+
             </group>
 
         </menu>
