--- a/app/src/main/res/drawable/layout_bg_radius.xml
+++ b/app/src/main/res/drawable/layout_bg_radius.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey"/>
+    <solid android:color="@color/primaryGreen"/>
     <stroke android:width="1dp" android:color="#B1BCBE" />
     <corners android:radius="5dp"/>
 </shape>
