--- a/app/src/main/res/layout/fragment_village_head_deciion.xml
+++ b/app/src/main/res/layout/fragment_village_head_deciion.xml
@@ -68,4 +68,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageNoData"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/ic_empty_data"
+        app:layout_constraintBottom_toTopOf="@+id/textNoData"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/listVillageHeadman"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textNoData"
+        style="@style/TextRegular2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/data_kosong"
+        android:fontFamily="@font/interregular"
+        android:textSize="@dimen/textSizeHeader"
+        app:layout_constraintBottom_toBottomOf="@+id/listVillageHeadman"
+        app:layout_constraintEnd_toEndOf="@id/listVillageHeadman"
+        app:layout_constraintStart_toStartOf="@+id/listVillageHeadman"
+        app:layout_constraintTop_toBottomOf="@+id/imageNoData" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/grup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="textNoData, imageNoData"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
