--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height_small"
+    android:layout_height="@dimen/nav_header_height"
     android:background="@color/primaryGreen"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -28,11 +27,26 @@
         android:text="DeSUN"
         android:textColor="@color/white"
         android:textSize="@dimen/textSizeHeaderBig"
-        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
+        app:layout_constraintBottom_toTopOf="@+id/textSubtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/imageLogo"
         app:layout_constraintTop_toTopOf="@+id/imageLogo" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textSubtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/distance_12"
+        android:fontFamily="@font/intermedium"
+        android:text="@string/tenrigangkae"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textSizeHeader"
+        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/imageLogo"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleAplikasiTopBar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
