--- a/app/src/main/res/layout/activity_backwood.xml
+++ b/app/src/main/res/layout/activity_backwood.xml
@@ -35,7 +35,7 @@
                     android:src="@drawable/logo_maros"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/textTitleAplikasiTopBar"
-                    app:layout_constraintHorizontal_bias="0.21"
+                    app:layout_constraintHorizontal_bias="0.43"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -46,20 +46,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/distance_12"
-                    android:text="@string/aplikasi"
+                    android:text="@string/app_name"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imageLogo"
                     app:layout_constraintTop_toTopOf="@+id/imageLogo" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/textTitleDesaTenrigangkaeTopBar"
-                    style="@style/TextTitleToolbarSecondary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/desa_tenrigangkae"
-                    app:layout_constraintStart_toStartOf="@+id/textTitleAplikasiTopBar"
-                    app:layout_constraintTop_toBottomOf="@+id/textTitleAplikasiTopBar" />
-
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imageLogout"
                     android:layout_width="30dp"
