--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -24,29 +24,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/distance_12"
         android:fontFamily="@font/intersemibold"
-        android:text="DeSUN"
+        android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/textSizeHeaderBig"
-        app:layout_constraintBottom_toTopOf="@+id/textSubtitle"
+        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/imageLogo"
         app:layout_constraintTop_toTopOf="@+id/imageLogo" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/distance_12"
-        android:fontFamily="@font/intermedium"
-        android:text="@string/tenrigangkae"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textSizeHeader"
-        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/imageLogo"
-        app:layout_constraintTop_toBottomOf="@+id/textTitleAplikasiTopBar" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
